load(
    ":fragments.bzl",
    "apple_fragment",
    "bazel_py_fragment",
    "configuration_fragment",
    "coverage_fragment",
    "cpp_fragment",
    "java_fragment",
    "platform_fragment",
    "proto_fragment",
    "py_fragment",
)

package(default_visibility = ["//visibility:public"])

apple_fragment(name = "apple")

bazel_py_fragment(name = "bazel_py")

configuration_fragment(name = "configuration")

coverage_fragment(name = "coverage")

cpp_fragment(name = "cpp")

java_fragment(name = "java")

platform_fragment(name = "platform")

proto_fragment(name = "proto")

py_fragment(name = "py")
