load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(":aspects.bzl", "aspect_reader", "node")
load(":defs.bzl", "repo_info", "setting_reader", "verify_native_apis")

string_flag(
    name = "mode",
    build_setting_default = "default",
)

repo_info(
    name = "repo_info",
    numbers = [4, 5, 6],
)

genrule(
    name = "hello",
    outs = ["hello.txt"],
    cmd = "echo 'Hello from patched bonanza' > $@",
)

# setting_reader's "setting" attribute carries an
# analysis_test_transition() that overrides //:mode, so the output
# must contain the transitioned value instead of the default.
setting_reader(
    name = "transitioned_mode",
    setting = ":mode",
)

verify_native_apis()

# A diamond dependency graph walked by collector_aspect. The aspect
# merges postorder depsets of labels; the leaf must be deduplicated
# even though it is reachable via both mid_a and mid_b.
node(name = "leaf")

node(
    name = "mid_a",
    deps = [":leaf"],
)

node(
    name = "mid_b",
    deps = [":leaf"],
)

node(
    name = "top",
    deps = [
        ":mid_a",
        ":mid_b",
    ],
)

# KNOWN GAP: bonanza parses aspect() definitions and attr aspects but
# does not yet apply aspects during analysis, so this target fails with
# 'did not yield provider TransitiveInfo'. Kept out of //:all until
# aspect propagation is implemented; build //:aspect_labels directly to
# reproduce.
aspect_reader(
    name = "aspect_labels",
    tags = ["manual"],
    deps = [":top"],
)

# Verifies, on the worker, that the artifacts produced by the targets
# above have the expected contents. If any assertion fails, the build
# fails.
genrule(
    name = "verify_repo_conformance",
    srcs = ["@conformance//:results.txt"],
    outs = ["verify_repo_conformance.txt"],
    cmd = "if grep -v '=ok' $(location @conformance//:results.txt); then echo 'repository_ctx conformance failures above'; exit 1; fi && cp $(location @conformance//:results.txt) $@",
)

genrule(
    name = "verify",
    srcs = [
        ":hello",
        ":repo_info",
        ":transitioned_mode",
    ],
    outs = ["verify.txt"],
    cmd = "grep -q 'Hello from patched bonanza' $(location :hello) && " +
          "grep -q 'module=testproject' $(location :repo_info) && " +
          "grep -q 'version=None' $(location :repo_info) && " +
          "grep -q 'repo=\"testproject+\"' $(location :repo_info) && " +
          "grep -q 'repository_name=\"@testproject+\"' $(location :repo_info) && " +
          "grep -q 'package=\"\"' $(location :repo_info) && " +
          "grep -q 'workspace_name=\"testproject+\"' $(location :repo_info) && " +
          "grep -q 'subpackages=\\[\"platforms\"\\]' $(location :repo_info) && " +
          "grep -q 'sum(\\[4, 5, 6\\]) = 15' $(location :repo_info) && " +
          "grep -q 'mode=transitioned' $(location :transitioned_mode) && " +
          "cat $(location :hello) $(location :repo_info) $(location :transitioned_mode) > $@",
)

filegroup(
    name = "all",
    srcs = [
        ":hello",
        ":repo_info",
        ":transitioned_mode",
        ":verify",
        ":verify_repo_conformance",
    ],
)
